Remove nls and fix header spacing

--- a/src/module/catalog/src/visualization/components/Sandbox/index.scss
+++ b/src/module/catalog/src/visualization/components/Sandbox/index.scss
@@ -4,6 +4,9 @@
     label{
         font-size: 13px;
     }
+    header{
+        margin-bottom:15px;
+    }
     .viz__wrapper{
         display:flex;
         h4{
